public/stylesheets/main.css
/* MAIN CSS */

/* GLOBAL CSS*/

*,
*::after,
*::before {
  box-sizing: border-box;
}

img {
  width: 100%;
  display: block;
}

html {
  font-size: 9px;
}

/* LAYOUT */

section {
  padding-block: 2rem;
}

.width-container {
  max-width: 675px;
  margin: 0 auto;
  padding-inline: 2rem;
}

.reversed-colour-scheme {
  background-color: #403D39;
  color: #FFFCF2;
}

header {
  background-color: #252422;
}

nav {
  max-width: 675px;
  padding-block: 1rem;
}

main {
  margin-block-start: 3rem;
}

.dice-container {
  margin-block-start: 20px;
  margin-block-end: 20px;
  margin-inline: auto;
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
  gap: 1rem;
  width: 200px;
}

.stats-display {
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
  justify-items: center;
}

form {
  margin-block-end: 2rem;
}

footer {
  background-color: #252422;
  color: #FFFCF2;
  padding-block: 2rem;
}

/* TYPOGRAPHY */

body {
  /* Can I find a true Palatino web font? */
  /* font-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif; */

  /* Until I can find proper Palatino for web, I'll use Georgia and this font stack: */
  font-family: Georgia, serif;
  line-height: 1.2;
  background-color: #FFFCF2;
}

h1 {
  font-weight: bolder;
  font-size: 2rem;
  text-transform: uppercase;
  margin-block-end: 1.5rem;
}

h2 {
  font-weight: 900;
  font-size: 1.7rem;
  margin-block-end: 1.5rem;
}

p {
  font-size: 1.625rem;
  margin-block-end: 2rem;
}

em {
  font-style: italic;
}

a {
  color: rgb(255, 48, 48);
}

.nav-item {
  display: block;
  padding-block: 1rem;
  font-size: 1.625rem;
  text-decoration: none;
  color: #CCC5B9;
}

.nav-item:hover,
.nav-item:focus {
  color: rgb(255, 48, 48);
}

.accented-nav {
  color: #FFFCF2;
  font-weight: 900;
}

.centred-text {
  text-align: center;
}

.inventory-item {
  font-family: "Shadows Into Light", cursive;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.5;
}

/* a variation of the h2 style */

.die-roll-result {
  margin-block-end: 0;
  display: block;
  align-self: center;
  font-size: 3rem;
}

.stat-title {
  align-self: center;
  margin-block-end: 0;
  padding-block: 0.5rem;
  font-size: 2rem;
}

.bookmark-value {
  font-size: 5rem;
}

.message {
  color: #FFFCF2;
  background: rgb(255, 48, 48);
  margin: 0;
  padding-block: 5rem;
}

/* ELEMENTS */

button,
.link-button {
  background-color: #403D39;
  color: #FFFCF2;
  font-family: inherit;
  text-decoration: none;
  font-size: 1.5rem;
  padding: 2rem;
  border-radius: 2rem;
}

button {
  margin-block: 5rem;
}

.link-button {
  display: block;
  margin: 0 auto 5rem;
  width: 60%;
}

button:hover,
button:focus,
.link-button:hover,
.link-button:focus {
  color: rgb(255, 48, 48);
}

input {
  display: block;
  font-family: inherit;
  font-size: 4rem;
  width: 25%;
  margin: 0 auto;
}

.delete-btn,
.modify-btn {
  font-family: Georgia, serif;
  text-decoration: none;
  font-size: 1.25rem;
  padding: 0.5rem;
  margin-inline-start: 1rem;
}

.delete-btn {
  background-color: rgb(255, 48, 48);
  color: #FFFCF2;
}

.modify-btn {
  background-color: #403D39;
  color: #FFFCF2;
}

.text-input {
  width: 80%;
}

.footer-paragraph {
  margin-block-start: 2rem;
}

/* MEDIA QUERIES */
/* REMEMBER: I HAVE WRITTEN A MOBILE-FIRST APP SO THESE MEDIA QUERIES ARE FOR THE CHANGES FOR SCREENS WIDER THAN MOBILE */

@media (min-width: 600px) {
  /* This deals with root font size for phones vs everything wider than a mobile */
  html {
    font-size: 16px;
  }

  nav {
    margin: 0 auto;
    padding-inline: 1rem;
    max-width: 1000px;
    display: grid;
    /* change number of columns to number of nav items in navigation */
    grid-template-columns: repeat(7, 1fr);
    justify-content: center;
    align-content: center;
  }
  .dice-container {
    width: 350px;
  }

  .stats-display {
    grid-template-columns: 1fr 1fr 1fr;
    max-width: 800px;
  }
}

/* Add some grid properties to create columns in desktop-width displays */

/* @media (min-width: 1200px) {
  add class for gridded column divs here
} */

